Better github.io site

--- a/downloads.html
+++ b/downloads.html
@@ -1,6 +1,6 @@
 ---
-layout: default
-permalink: /downloads
+layout: lavendeux
+permalink: /lavendeux/downloads
 title: Downloads
 ---
 <div class="p-3 mb-4">
