--- a/lavendeux.html
+++ b/lavendeux.html
@@ -1,6 +1,6 @@
 ---
-layout: default
-permalink: /
+layout: lavendeux
+permalink: /lavendeux/
 title: Lavendeux
 ---
 <div class="p-5 mb-4 bg-light rounded-3 bg-light border">
