fix bug in help

--- a/lavendeux.html
+++ b/lavendeux.html
@@ -69,7 +69,7 @@ x = sqrt(256)
     <pre class="code-sample" id="jsSample-sample"></pre>
 </div>
 
-<script src="js/help.js"></script>
+<script src="/js/help.js"></script>
 <script type="text/javascript">
     setSample(dataTypeSample, 'dataTypes-sample');
     setSample(operationsSample, 'operationsSample-sample');
