--- a/downloads.html
+++ b/downloads.html
@@ -18,6 +18,17 @@ title: Downloads
                       <li><a class="dropdown-item" href="{{ release.downloads.win_zip }}">Standalone executable</a></li>
                     </ul>
                 </div>
+                {% if release.downloads.linux_deb != nil %}
+                <div class="btn-group" role="group">
+                    <button id="x64_linux_links" type="button" class="btn btn-outline-danger dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                        x64 Linux
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="x64_linux_links">
+                      <li><a class="dropdown-item" href="{{ release.downloads.linux_deb}}">Deb Installer</a></li>
+                      <li><a class="dropdown-item" href="{{ release.downloads.linux_appimage}}">AppImage Installer</a></li>
+                    </ul>
+                </div>
+                {% endif %}
                 <a href="{{ release.downloads.source }}" role="button" class="btn btn-outline-primary">Download source code</a>
             </div>
             
