--- a/lavendeux.html
+++ b/lavendeux.html
@@ -51,7 +51,8 @@ x = sqrt(256)
 </div>
 
 <div class="p-3 mb-4" id="help"></div>
+<link rel="stylesheet" href="/js/formatter/formatter.css">
 <script type="module">
-    import { helpText } from '/js/help_strings.js';
-    document.getElementById("help").innerHTML = "<h4>How to use it</h4>" + helpText();
+    import { getSampleHTML } from '/js/formatter/index.js';
+    document.getElementById("help").innerHTML = "<h4>How to use it</h4>" + getSampleHTML();
 </script>
