--- a/lavendeux copy.html
+++ b/lavendeux copy.html
@@ -1,6 +1,6 @@
 ---
 layout: lavendeux
-permalink: /lavendeux/
+permalink: /Lavendeux/
 title: Lavendeux
 ---
 <div class="p-5 mb-4 bg-light rounded-3 bg-light border">
