--- a/zarban.html
+++ b/zarban.html
@@ -7,6 +7,6 @@ title: Zarban's Grotto
 
 <script type="module" src="/js/zarbans_grotto.js"></script>
 <script type="module" type="text/javascript">
-  const container = document.getElementById('zarban_container');
-  Zarban.WebPlayer.init(container);
+    const container = document.getElementById('zarban_container');
+    new Zarban.WebPlayer(container);
 </script>
