prep for new version

--- a/lavendeux.html
+++ b/lavendeux.html
@@ -50,9 +50,4 @@ x = sqrt(256)
 </textarea>
 </div>
 
-<div class="p-3 mb-4" id="help"></div>
-<link rel="stylesheet" href="/js/formatter/formatter.css">
-<script type="module">
-    import { getSampleHTML } from '/js/formatter/index.js';
-    document.getElementById("help").innerHTML = "<h4>How to use it</h4>" + getSampleHTML();
-</script>
+<a href="https://rscarson.github.io/lavendeux/docs">Link to syntax help and documentation</a>
