--- a/lavendocs.html
+++ b/lavendocs.html
@@ -343,10 +343,9 @@ Expressions can optionally end with an @decorator to format the output as a stri
 <li>Seamless type conversion (<a href="#the-type-system">reference</a>)</li>
 </ul>
 <h1 id="the-type-system"><a href="#the-type-system">1 The Type System</a></h1>
-<p>All expressions in Lavendeux must return a value of a specific type.
-These types can be broadly categorized as <code>numeric</code>, <code>collection</code>, or <code>string</code>.</p>
-<p>The type of a given expression is calculated on a hierarchy, based on the ‘specificity’ of the types involved.
-The hierarchy is as follows (from lowest to highest priority):</p>
+<p>All expressions in Lavendeux must return a value of a specific type. These types can be broadly categorized as <code>numeric</code>, <code>collection</code>, or <code>string</code>.</p>
+<p>The type of a given expression is calculated on a hierarchy, based on the ‘specificity’ of the types involved.</p>
+<p>The hierarchy is as follows (from lowest to highest priority):</p>
 <ul>
 <li>Bool</li>
 <li>Int (in order, <code>u8, i8, u16, i16, u32, i32, u64, i64</code>)</li>
@@ -356,27 +355,35 @@ The hierarchy is as follows (from lowest to highest priority):</p>
 <li>Array, then Object</li>
 </ul>
 <p>Note that range is not included, since it can only be compared to itself, or to arrays.</p>
-<p>So for example, if you add an int to a float, the result will be a float.
-Some types can also be grouped together, like <code>int</code> (see aboove), or <code>numeric</code> (which includes all numeric types),
-and <code>collection</code> (which includes range, string, array and object).
-‘any’ is the implicit type that includes everything.</p>
-<p>The names of the types, for the most part, are self-explanatory, but here’s a quick rundown:
-<code>bool</code> - A single-bit truth value
-<code>int</code> - A signed or unsigned integer of various sizes (<code>u8</code> to <code>i64</code>)
-<code>float</code> - A 64bit floating-point number
-<code>fixed</code> - A fixed-point decimal value
-<code>currency</code> - A fixed-point decimal value with a currency symbol and set precision
-<code>array</code> - An ordered collection of values, indexed by integers
-<code>object</code> - An unordered collection of key-value pairs
-<code>range</code> - An inclusive range of integers
-<code>string</code> - A sequence of characters
-<code>numeric</code> - The implicit type that includes all numeric types, and <code>bool</code>
-<code>collection</code> - The implicit type that includes all collection types
-<code>any</code> - The implicit type that includes everything</p>
+<p>So for example, if you add an int to a float, the result will be a float.</p>
+<p>Some types can also be grouped together, like</p>
+<ul>
+<li><code>int</code> (see aboove)</li>
+<li><code>numeric</code> (which includes all numeric types)</li>
+<li><code>collection</code> (which includes range, string, array and object)</li>
+<li><code>any</code> (the implicit type that includes everything)</li>
+</ul>
+<p>The names of the types, for the most part, are self-explanatory, but here’s a quick rundown:</p>
+<ul>
+<li><code>bool</code> - A single-bit truth value</li>
+<li><code>int</code> - A signed or unsigned integer of various sizes (<code>u8</code> to <code>i64</code>)</li>
+<li><code>float</code> - A 64bit floating-point number</li>
+<li><code>fixed</code> - A fixed-point decimal value</li>
+<li><code>currency</code> - A fixed-point decimal value with a currency symbol and set precision</li>
+<li><code>array</code> - An ordered collection of values, indexed by integers</li>
+<li><code>object</code> - An unordered collection of key-value pairs</li>
+<li><code>range</code> - An inclusive range of integers</li>
+<li><code>string</code> - A sequence of characters</li>
+<li><code>numeric</code> - The implicit type that includes all numeric types, and <code>bool</code></li>
+<li><code>collection</code> - The implicit type that includes all collection types</li>
+<li><code>any</code> - The implicit type that includes everything</li>
+</ul>
 <hr />
 <h2 id="bool"><a href="#bool">1.1 bool</a></h2>
-<p>The <code>bool</code> type is a single-bit truth value, and can be either <code>true</code> or <code>false</code>.
-In arithmetic operations, <code>true</code> is equivalent to <code>1</code>, and <code>false</code> is equivalent to <code>0</code>; operations are performed as if on a wrapping 1-bit integer.</p>
+<p>The <code>bool</code> type is a single-bit truth value, and can be either <code>true</code> or <code>false</code>.</p>
+<ul>
+<li>In arithmetic operations, <code>true</code> is equivalent to <code>1</code>, and <code>false</code> is equivalent to <code>0</code>; operations are performed as if on a wrapping 1-bit integer.</li>
+</ul>
 <p><strong>Casting:</strong>
 It can be cast from any type; and truth is determined by equivalence to 0, or by emptiness, depending on the type.</p>
 <p><strong>Formatting:</strong>
@@ -385,9 +392,11 @@ When cast to a string, it will be formatted as <code>true</code> or <code>false<
 <div class="example-wrap"><pre class="language-lavendeux"><code>1 as bool; // true
 [] as bool; // false
 </code></pre></div><h2 id="int"><a href="#int">1.2 int</a></h2>
-<p>Covering the types from <code>u8</code> to <code>i64</code>, <code>int</code> is a signed or unsigned integer of various sizes.
-Integers can be written in decimal, binary, octal, or hexadecimal, with an optional suffix to specify the type.
-If no suffix is provided, the type defaults to i64.</p>
+<p>Covering the types from <code>u8</code> to <code>i64</code>, <code>int</code> is a signed or unsigned integer of various sizes.</p>
+<ul>
+<li>Integers can be written in decimal, binary, octal, or hexadecimal, with an optional suffix to specify the type.</li>
+<li>If no suffix is provided, the type defaults to i64.</li>
+</ul>
 <p><strong>Casting:</strong>
 It can be cast from and to any type, and from any numeric type.</p>
 <p><strong>Formatting:</strong>
@@ -409,8 +418,10 @@ When cast to a string, it will be formatted as a decimal number. For other forma
 .2; // 0.2
 3e+7; // 30,000,000
 </code></pre></div><h2 id="fixed"><a href="#fixed">1.4 fixed</a></h2>
-<p>A fixed-point decimal value. Fixed literals are suffixed with <code>D</code>.
-Note that fixed-point exponentiation is not supported, and will result in an implicit cast to float.</p>
+<p>A fixed-point decimal value. Fixed literals are suffixed with <code>D</code>.</p>
+<ul>
+<li>Note that fixed-point exponentiation is not supported, and will result in an implicit cast to float.</li>
+</ul>
 <p><strong>Casting:</strong>
 It can be cast from and to any type, and from any numeric type.</p>
 <p><strong>Formatting:</strong>
@@ -437,11 +448,13 @@ $2.00 + £1.000; // 3.000
 </code></pre></div><h2 id="array"><a href="#array">1.6 array</a></h2>
 <p>An ordered collection of values, indexed by integers. Values can be a mix of types.</p>
 <p><strong>Casting:</strong>
-It can be cast from any type; and will result in a single-value array - <code>A as array</code> is equivalent to <code>[A]</code>.
-When cast to any non-collection type, it will extract the single value, if the array has a length of 1 - <code>['a'] as int</code> would result in <code>a</code>.
-Casting a larger array to a non-collection type will result in an error.
-Casting array to object will result in an object with integer keys, and the values of the array.
-Casting range to array will result in an array of the range values (very large ranges may result in an error).</p>
+It can be cast from any type; and will result in a single-value array - <code>A as array</code> is equivalent to <code>[A]</code>.</p>
+<ul>
+<li>When cast to any non-collection type, it will extract the single value, if the array has a length of 1 - <code>['a'] as int</code> would result in <code>a</code>.</li>
+<li>Casting a larger array to a non-collection type will result in an error.</li>
+<li>Casting array to object will result in an object with integer keys, and the values of the array.</li>
+<li>Casting range to array will result in an array of the range values (very large ranges may result in an error).</li>
+</ul>
 <p><strong>Formatting:</strong>
 When cast to a string, it will be formatted as a comma-separated list of values, enclosed in square brackets.</p>
 <p><strong>Examples:</strong></p>
@@ -450,14 +463,18 @@ When cast to a string, it will be formatted as a comma-separated list of values,
 [1, 2, 3] as object; // {0: 1, 1: 2, 2: 3}
 1..3 as array; // [1, 2, 3]
 </code></pre></div><h2 id="object"><a href="#object">1.7 object</a></h2>
-<p>An unordered collection of key-value pairs, where keys are any non-collection type and values can be a mix of types.
-Unlike boolean comparison operators (see &lt;#boolean&gt;), key comparison is type-sensitive - <code>{1: 2} == {'1': 2}</code> would be false.</p>
+<p>An unordered collection of key-value pairs, where keys are any non-collection type and values can be a mix of types.</p>
+<ul>
+<li>Unlike boolean comparison operators (see &lt;#boolean&gt;), key comparison is type-sensitive - <code>{1: 2} == {'1': 2}</code> would be false.</li>
+</ul>
 <p><strong>Casting:</strong>
-It can be cast from any type; and will result in a single-value object - <code>A as object</code> is equivalent to <code>{0: A}</code>.
-This is the same as casting to array, then to object.
-When cast to any non-collection type, it will extract the single value, if the object has a length of 1 - <code>{0: 'a'} as int</code> would result in <code>a</code>.
-Casting a larger object to a non-collection type will result in an error.
-Casting object to array will result in an array of the object values.</p>
+It can be cast from any type; and will result in a single-value object - <code>A as object</code> is equivalent to <code>{0: A}</code>.</p>
+<ul>
+<li>This is the same as casting to array, then to object.</li>
+<li>When cast to any non-collection type, it will extract the single value, if the object has a length of 1 - <code>{0: 'a'} as int</code> would result in <code>a</code>.</li>
+<li>Casting a larger object to a non-collection type will result in an error.</li>
+<li>Casting object to array will result in an array of the object values.</li>
+</ul>
 <p><strong>Formatting:</strong>
 When cast to a string, it will be formatted as a comma-separated list of key-value pairs, enclosed in curly brackets.</p>
 <p><strong>Examples:</strong></p>
@@ -475,8 +492,8 @@ When cast to a string, it will be formatted in the form <code>start..end</code>.
 <div class="example-wrap"><pre class="language-lavendeux"><code>1..3 as array; // [1, 2, 3]
 &#39;a&#39;..&#39;c&#39; as array // [&#39;a&#39;, &#39;b&#39;, &#39;c&#39;]
 </code></pre></div><h2 id="string"><a href="#string">1.9 string</a></h2>
-<p>Any value can be cast to a string, to get a string representation of that value. It is encoding as a UTF-8 string.
-It is enclosed in single or double quotes, and supports the following supported escape sequences:</p>
+<p>Any value can be cast to a string, to get a string representation of that value. It is encoding as a UTF-8 string.</p>
+<p>It is enclosed in single or double quotes, and supports the following supported escape sequences:</p>
 <ul>
 <li><code>\'</code> Single-quote</li>
 <li><code>\&quot;</code> Double-quote</li>
@@ -485,12 +502,20 @@ It is enclosed in single or double quotes, and supports the following supported 
 <li><code>\t</code> Tab</li>
 <li><code>\\</code> Literal backslash</li>
 </ul>
+<p>Strings can also be formatted as regex literals, for the purpose of pattern matching:</p>
+<div class="example-wrap"><pre class="language-lavendeux"><code>/pattern/i
+/.*/
+</code></pre></div>
 <p><strong>Casting:</strong>
-It can be cast from any type, and cast to array or object.
-Casting to array will result in a character array, and casting to object will in a single-value object with the key <code>0i64</code></p>
+It can be cast from any type, and cast to array or object.</p>
+<ul>
+<li>Casting to array will result in a character array, and casting to object will in a single-value object with the key <code>0i64</code></li>
+</ul>
 <p><strong>Formatting:</strong>
-When cast to a string, it will be formatted as a string literal, without enclosing quotes.
-Inside a, array or object, it will be formatted as a string literal, with enclosing quotes.</p>
+When cast to a string, it will be formatted as a string literal, without enclosing quotes.</p>
+<ul>
+<li>Inside a, array or object, it will be formatted as a string literal, with enclosing quotes.</li>
+</ul>
 <p><strong>Examples:</strong></p>
 <div class="example-wrap"><pre class="language-lavendeux"><code>&quot;test \&quot;&quot;
 1 as string // &quot;1&quot;
